influxdb3_enterprise/buffer/src/snapshots/influxdb3_enterprise_buffer__replica__tests__map_wal_content_for_replica_new_db_new_table-3.snap
---
source: influxdb3_enterprise/buffer/src/replica.rs
description: "database schema in primary catalog after mapping and applying replica WAL content, should include table 'dog'"
expression: db
---
id: 3
name: sup
tables:
  - - 3
    - table_id: 3
      table_name: dog
      key:
        - 9
      cols:
        - - 10
          - name: f1
            id: 10
            type: f64
            influx_type: field
            nullable: true
        - - 9
          - name: t1
            id: 9
            type:
              dict:
                - i32
                - str
            influx_type: tag
            nullable: true
        - - 11
          - name: time
            id: 11
            type:
              time:
                - ns
                - ~
            influx_type: time
            nullable: false
      deleted: false
processing_engine_triggers: []
deleted: false
