influxdb3_enterprise/buffer/src/snapshots/influxdb3_enterprise_buffer__replica__tests__map_wal_content_for_replica_new_db_new_table_already_on_local-2.snap
---
source: influxdb3_enterprise/buffer/src/replica.rs
description: id map after mapping replica WAL content
expression: id_map
snapshot_kind: text
---
dbs:
  1: 0
  3: 2
tables:
  1: 0
  3: 2
columns:
  3: 0
  4: 1
  5: 2
  9: 6
  10: 7
  11: 8
